--- a/index.html
+++ b/index.html
@@ -43,32 +43,8 @@
     <footer>
       <div class="rowfooter">
         <div>
-          <h3 class="">Quick Links</h3>
-          <ul class="footermenuitems m0">
-            <li>
-              <a href="#">My Spaces</a>
-            </li>
-            <li>
-              <a href="#">Profile</a>
-            </li>
-            <li>
-              <a href="#">Account settings</a>
-            </li>
-            <li>
-              <a href="#">Get in touch</a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3 class="">Extra Info</h3>
-          <ul>
-            <li>
-              <a href="#">Terms & Conditions</a>
-            </li>
-            <li>
-              <a href="#" target="_blank">Privacy policy</a>
-            </li>
-          </ul>
+          <h3 class="">Website made by Josh Carse & Cassie Carse</h3>
+          <p>Help from Ken Carse (our Dad)</p>
         </div>
       </div>
     </footer>
