--- a/stories.html
+++ b/stories.html
@@ -17,13 +17,13 @@
       <div class="navLinks">
         <ul>
           <li>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="timeline.html">Timeline</a>
           </li>
           <li>
-            <a href="stories.html">Stories</a>
+            <a href="stories.html" class="active">Stories</a>
           </li>
           <li>
             <a href="chapters.html">Chapters</a>
@@ -32,11 +32,18 @@
       </div>
     </nav>
 
-    <section class="hero">
-      <img src="img/hero.JPG" />
-      <div class="home">
-        <h1>Celebrating a hundred years of life.</h1>
-        <button>Explore</button>
+    <section class="heroInner">
+      <div>
+        <h1>Stories</h1>
+      </div>
+    </section>
+    <section>
+      <div>
+        <img />
+      </div>
+      <div>
+        <h2></h2>
+        <p></p>
       </div>
     </section>
     <!-- Footer -->
