--- a/stories.html
+++ b/stories.html
@@ -38,12 +38,11 @@
       </div>
     </section>
     <section>
-      <div>
-        <img />
-      </div>
-      <div>
-        <h2></h2>
-        <p></p>
+      <div class="gallery stories">
+        <img src="/img/poem.jpeg" />
+        <img src="/img/pops.jpeg" />
+        <img src="/img/keperra.JPG" />
+        <img src="/img/work.jpeg" />
       </div>
     </section>
     <!-- Footer -->
